# s-photo

./: .gitignore  README.md  auto-imports.d.ts  components.d.ts  index.html  nuxt.config.ts  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: publish.yml
assets/css/: main.css
components/: Dialog.vue
layouts/: default.vue
pages/: index.vue
scripts/: updater.mjs
src/: App.vue  chinese-map.ts  img-file.ts  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/assets/: global.css
src/components/: Index.vue
src/stores/: files.ts
src/workers/: get-tags.ts
stores/: files.ts
