[package]
name = "s-photo"
version = "2.0.0"
description = "使用几个快捷键即可快速筛选照片"
authors = ["share121"]
license = "MIT"
repository = "https://github.com/share121/s-photo"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.2.0", features = ["protocol-asset"] }
tauri-plugin-log = "2.0.0-rc"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"

[profile.dev]
incremental = true # 以小步骤编译你的二进制文件。

[profile.release]
codegen-units = 1 # 允许 LLVM 执行更好的优化。
lto = true        # 启用链接时间优化。
opt-level = 3     # 优先考虑小二进制文件大小。如果你更看重速度，请使用 `3`。
panic = "abort"   # 通过禁用 panic 处理程序提高性能。
strip = true      # 确保移除调试符号。

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
